Fix broken package.xml files

--- a/smach/package.xml
+++ b/smach/package.xml
@@ -17,7 +17,8 @@
   <author>Jonathan Bohren</author>
   <author>Charles Lesire</author>
 
-  <buildtool_depend>ament_python</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <export>
     <build_type>ament_python</build_type>
