--- a/smach_ros/package.xml
+++ b/smach_ros/package.xml
@@ -20,7 +20,8 @@
   <author>Jonathan Bohren</author>
   <author>Charles Lesire</author>
 
-  <buildtool_depend>ament_python</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
