--- a/smach/package.xml
+++ b/smach/package.xml
@@ -21,7 +21,7 @@
   <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
     <rosdoc config="rosdoc.yaml"/>
   </export>
 </package>
